# AQUA

./: .agents.md  .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  aqua_setup_and_run.sh  aviso.ipynb  builder.sh  codecov.yml  config-z3fdb.yaml  config.yaml  demo_levante.ipynb  dev-environment.yml  environment-pypi.yml  environment.yml  icon_ng4008.yaml  load_ci_icon.ipynb  lra-aina.ipynb  mswep_kerchunk.ipynb  pre-receive  pyproject.toml  python_build.sh  regridder.py  requirements.yml  setup.py  ssh_diagnostics_v1.ipynb  ssh_diagnostics_v1_dataslice.ipynb  ssh_diagnostics_v2_fulldata.ipynb  test-gsv.ipynb  test-z3fdb.ipynb  test.ipynb  test.py  test_intake.ipynb  test_speed_levante.ipynb  tests.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml
.github/PULL_REQUEST_TEMPLATE/: standard_pull_request.md  version_release.md
.github/workflows/: aqua-complete.yml  aqua-no-fdb.yml  aqua-pypi.yml  aqua-ruff.yml  aqua-test-reusable.yml  aqua.yml  conda-dependency-graph.yml  create-container-from-tag.yaml  create-fdb-container.yaml  pypi-publish.yaml  teleconnections.yaml  teleconnections.yml
aqua/: __init__.py  accessor.py  logger.py  util.py
aqua/benchmark/: graphic_creator.py  time_functions.py
aqua/cli/: main.py  parser.py
aqua/core/: __init__.py  accessor.py  exceptions.py  logger.py  version.py
aqua/graphics/: __init__.py  maps.py
aqua/gribber/: gribber.py
aqua/gsv/: intake_gsv.py  timeutil.py
aqua/lra_generator/: lra_generator.py  opa_generator.py  util.py
aqua/magic_functions/: performance.py
aqua/reader/: catalogue.py  fixer.py  reader.py  reader_utils.py  regrid.py  timmean.py
aqua/slurm/: __init__.py  slurm.py
aqua/util/: __init__.py  (+6 more)
cli/: tco79_lumi.yaml  test_cli.ipynb
conda/: environment.yaml
conda-recipe/: README.md  aqua-0.0.2-0.tar.bz2  bld.bat  build.sh  meta.yaml
config/: config-aqua.tmpl  config-aqua.yaml  config.aqua-analysis.yaml  config.yaml  config_levante.yml  config_wilma.yml  fixes.yaml
diagnostics/replicability/: KMS_test.py  pyproject.toml
diagnostics/replicability/a0er-lumi-c-PI/: fc7.yml
diagnostics/replicability/cli/: KS_test.py  cli_replicability.py  config.yaml
diagnostics/replicability/notebooks/: KMS_test.ipynb  KS_test.ipynb
diagnostics/replicability/replicability/: __init__.py  ks_test.py
diagnostics/tropical_rainfall/: __init__.py  config-tropical-rainfall.yml  env_setup.sh  post_install.py  pyproject.toml  tr_pr_mod.py  tropical_rainfall_class.py  tropical_rainfall_func.py  tropical_rainfall_plot.py  tropical_rainfall_plots.py  tropical_rainfall_tools.py
diagnostics/tropical_rainfall/cli/: cli_config_trop_rainfall.yml  cli_tropical_rainfall.py
diagnostics/tropical_rainfall/enviroment/: env-tropical-rainfall.yml  merged.yml
diagnostics/tropical_rainfall/notebooks/: animation.ipynb  big_diagnostic_demonstration.ipynb  calc_time_comparison.ipynb  comparison_of_lowres_models.ipynb  comparison_of_lowres_models_095level.ipynb  daily_variability.ipynb  data_load_test.ipynb  deliverable_2.ipynb  demo_ERA5.ipynb  demo_FESOM.ipynb  demo_ICON.ipynb  demo_IFS.ipynb  demo_MSWEP.ipynb  demo_for_lowres_data.ipynb  demo_levante.ipynb  diagnostic_vs_streaming.ipynb  for_live_demonstration.ipynb  histogram_calculation.ipynb  histogram_calculations_of_highres.ipynb  histogram_plotting.ipynb  ifs_new_scientific_delivery.ipynb  map.ipynb  test.ipynb  test_speed_levante.ipynb  time_mem_expectation.ipynb
diagnostics/tropical_rainfall/notebooks/detailed_demo_and_analyses/: calculation_095level.ipynb  daily_variability.ipynb  diagnostic_vs_streaming.ipynb  histogram_calculation.ipynb  histogram_plotting.ipynb  lowres_models_095level.ipynb  map.ipynb  time_band_attributes.ipynb
diagnostics/tropical_rainfall/notebooks/time_memory_estimation/: README.md  memory_test.py  memory_usage_estimation.ipynb  time_estimation.ipynb  time_test.py
diagnostics/tropical_rainfall/src/: graphic_creator.py  memory_estimator.py  memory_estimator_opt.py  shared_func.py  slurm_job.py  time_estimation.py  time_estimation_opt.py  time_functions.py  time_memory_estimator.py  tr_pr_mod.py  tr_pr_module.py  tropical_rainfall_main.py  tropical_rainfall_meta.py  tropical_rainfall_plots.py  tropical_rainfall_tools.py
diagnostics/tropical_rainfall/test/: test_tr_pr_mod.py
diagnostics/tropical_rainfall/tropical_rainfall/: __init__.py  tropical_rainfall_class.py
diagnostics/tropical_rainfall/tropical_rainfall/cli/: main.py  parser.py
diagnostics/tropical_rainfall/tropical_rainfall/src/: tropical_rainfall_daily_variability.py  tropical_rainfall_data_manager.py  tropical_rainfall_extra.py  tropical_rainfall_histograms.py  tropical_rainfall_main.py  tropical_rainfall_meta.py  tropical_rainfall_plots.py  tropical_rainfall_tools.py  tropical_rainfall_zonal_mean.py
dockerfiles/: Dockerfile  Dockerfile.aqua  Dockerfile.ubuntu  README.md
log/: .ensmean_IFS-FESOM-10km_story-nudging-hist_lra-r100-monthly_10u_24807979.err.swp
notebooks/: demo_lev_eerie.ipynb  demo_lev_eerie2.ipynb  demo_lev_regions.ipynb  demo_lev_regions_local.ipynb  demo_lumi.ipynb  diagnostics.ipynb
requirements/: README.md  check_aqua_env.py  conda_req_for_yml.py  conda_requirements.txt  pip_requirements.txt
safe_commits/: README.md  pre-commit  pre-push
tests/: conftest.py  test_accessor.py  test_analysis.py  test_basic.py  test_catalog.py  test_catgen.py  test_checksum.py  test_cli_checker.py  test_cli_util.py  test_config.py  test_configstyle.py  test_console.py  test_coord_flipping.py  test_coordtransformer.py  test_datamodel.py  test_drop.py  test_drop_util.py  test_esm.py  test_filter_key.py  test_fixer.py  test_fldstat.py  test_graphics-tools.py  test_graphics.py  test_gridbuilder.py  test_griddeploy.py  test_gsv.py  test_gsv_timeutil.py  test_histogram_function.py  test_intake2_sources.py  test_intake_drivers_xarray.py  test_kwargs.py  test_levels.py  test_lra.py  test_mask.py  test_preproc.py  test_projections.py  test_regrid.py  test_safelock.py  test_sci_tools.py  test_slurm.py  (+8 more)
(+1118 files in other folders)
