[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# For setuptools: https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "aqua"
dynamic = ["version"]
authors = [ # AQUA core team reported here
    {name = "The AQUA team", email = "p.davini@isac.cnr.it"},
    {name = "Paolo Davini", email = "p.davini@isac.cnr.it"},
    {name = "Matteo Nurisso", email = "m.nurisso@isac.cnr.it"},
    {name = "Silvia Caprioli", email = "silvia.caprioli@polito.it"},
    {name = "Jost von Hardenberg", email = "jost.hardenberg@polito.it"},
    {name = "Natalia Nazarova", email = "natalia.nazarova@polito.it"},
    {name = "Supriyo Ghosh", email = "supriyo.ghosh@bsc.es"},
    {name = "Maqsood Mubarak Rajput", email = "maqsoodmubarak.rajput@awi.de"}
]
description = "AQUA; a model evaluation framework for high-resolution climate model simulations"
readme = "README.md"
keywords = ["climate", "modeling", "diagnostics", "high-resolution"]
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
    "boto3==1.40.58",
    "cartopy==0.24.1",
    "cfgrib==0.9.15.1",
    "dask==2025.10.0",
    "eccodes==2.41.0",
    "docker==7.1.0",
    "filelock==3.20.0",
    "gcsfs==2025.9.0", # Google Cloud Storage File System
    "pandas==2.3.3",
    "intake==0.7.0", # Version 2 is a major refactor still in development
    "intake-esm==2024.2.6",
    "intake-xarray==0.7.0",
    "jinja2==3.1.6",
    "matplotlib==3.10.7",
    "metpy==1.7.1",
    "numpy==2.3.4",
    "pydantic==2.12.0",
    "pypdf==6.1.3",
    "pyYAML==6.0.3",
    "ruamel.yaml==0.18.16",
    "smmregrid==0.1.3",
    "sparse==0.17.0",
    "typeguard==4.4.4",
    "xarray==2025.09.0",
    "kerchunk==0.2.9",
    "h5py>=3.12.1",
    "fastparquet==2024.11.0",
    "ECmean4==0.1.15",
    "pyfdb==0.1.2",
    "gsv-interface==2.13.1",
    "zarr==3.1.3"
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme"
]
notebooks = [
    "ipykernel",
    "healpy"
]
tests = [
    "pytest",
    "pytest-cov",
    "coverage",
    "cdo"
]
all = [
    "aqua[docs]",
    "aqua[notebooks]",
    "aqua[tests]"
]

[project.scripts]
aqua = "aqua.cli.main:main"

[project.urls]
homepage = "https://github.com/DestinE-Climate-DT/AQUA/"
documentation = "https://aqua.readthedocs.io/en/latest/index.html"
repository = "https://github.com/DestinE-Climate-DT/AQUA/"
issues = "https://github.com/DestinE-Climate-DT/AQUA/issues/"

[tool.setuptools.package-data]
platforms = ["any"]

[tool.setuptools.package-dir]
"aqua" = "src/aqua"
"aqua.diagnostics" = "src/aqua_diagnostics"

[tool.setuptools.dynamic]
version = {attr = "aqua.version.__version__"}

[tool.pytest.ini_options]
# verbose to have full test, run coverage on src folder and use pyproject as a configuration file
addopts = "--durations=10 -v --cov=aqua" 
testpaths = [
    "tests"
]
markers = [
    "aqua: mark test as AQUA framework",
    "slow: tests which are slow",
    "sbatch: tests which require sbatch",
    "graphics: tests which deal with graphics",
    "gsv: mark test that requires ECMWF FDB libraries",
    "diagnostics: single marker for all diagnostics",
    "catgen: mark test for catalog generator",
    "ensemble: pytest for ensemble diagnostic"
]

[tool.coverage.run]
branch = true
command_line = '-m pytest tests'
source = ["src/aqua"]
omit = [
    "tests/*", 
    "**/__init__.py",
    "src/aqua_diagnostics/dummy"
    ]

