[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

# For setuptools: https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "aqua-core"
dynamic = ["version"]
authors = [ # AQUA core team reported here
    {name = "Paolo Davini", email = "paolo.davini@cnr.it"},
    {name = "Matteo Nurisso", email = "m.nurisso@isac.cnr.it"},
    {name = "Silvia Caprioli", email = "silvia.caprioli@polito.it"},
    {name = "Jost von Hardenberg", email = "jost.hardenberg@polito.it"},
    {name = "Marco Cadau", email = "marco.cadau@polito.it"},
    {name = "Emanuele Tovazzi", email = "emanuele.tovazzi@cnr.it"},
    {name = "Supriyo Ghosh", email = "supriyo.ghosh@bsc.es"},
    {name = "Maqsood Mubarak Rajput", email = "maqsoodmubarak.rajput@awi.de"}
]
description = "AQUA; a model evaluation framework for high-resolution climate model simulations"
readme = "README.md"
keywords = ["climate", "modeling", "diagnostics", "high-resolution"]
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
    "boto3<=1.42.32",
    "cartopy==0.24.1",
    "cfgrib<=0.9.15.1",
    "dask[distributed]<=2026.1.1",
    "eccodes==2.45.0",
    "filelock<=3.20.3",
    "gcsfs<=2026.1.0", # Google Cloud Storage File System
    "intake==0.7.0", # Version 2 is a major refactor still in development
    "intake-xarray<=0.7.0",
    "jinja2<=3.1.6",
    "matplotlib<=3.10.8",
    "metpy<=1.7.1",
    "numpy<=2.4.1",
    "pandas==3.0.0", # pandas3 required for new time unit handling
    "pydantic<=2.12.5",
    "pypdf<=6.6.0",
    "pyYAML<=6.0.3",
    "regionmask<=0.13.0",
    "ruamel.yaml<=0.19.1",
    "scipy<=1.17.0",
    "seaborn<=0.13.2",
    "smmregrid==0.1.3",
    "typeguard<=4.4.4",
    "xarray==2025.12.0",
    "kerchunk<=0.2.9",
    "h5py>=3.12.1,<=3.15.1", #specific github pin to avoid installation of binaries
    "fastparquet<=2025.12.0",
    "pyfdb==0.1.2",
    "gsv-interface==2.13.1",
    "zarr<=3.1.5"
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme"
]
notebooks = [
    "ipykernel",
    "healpy"
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "coverage",
    "cdo"
]
all = [
    "aqua-core[docs]",
    "aqua-core[notebooks]",
    "aqua-core[tests]"
]

[project.scripts]
aqua = "aqua.core.console.main:main"

[project.urls]
homepage = "https://github.com/DestinE-Climate-DT/AQUA/"
documentation = "https://aqua.readthedocs.io/en/latest/index.html"
repository = "https://github.com/DestinE-Climate-DT/AQUA/"
issues = "https://github.com/DestinE-Climate-DT/AQUA/issues/"

[tool.setuptools.packages.find]
where = ["."]
include = ["aqua*"]

# Include non-Python files inside aqua/config and aqua/templates
[tool.setuptools.package-data]
"aqua" = [
    "core/config/**/*",
    "core/templates/**/*"
]

[tool.setuptools.dynamic]
version = {attr = "aqua.core.version.__version__"}

[tool.pytest.ini_options]
# verbose to have full test, run coverage on src folder and use pyproject as a configuration file
addopts = "--durations=10 -v --cov=aqua" 
testpaths = [
    "tests"
]
markers = [
    "aqua: mark test as AQUA framework",
    "slow: tests which are slow",
    "sbatch: tests which require sbatch",
    "graphics: tests which deal with graphics",
    "gsv: mark test that requires ECMWF FDB libraries",
    "catgen: mark test for catalog generator",
    "console: mark test for console",
]

[tool.coverage.run]
branch = true
command_line = '-m pytest tests'
source = ["aqua/core"]
omit = [
    "tests/*", 
    "**/__init__.py",
    ]

