[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tropical_rainfall"
version = "0.0.1"
description = "A Python package for analyzing tropical rainfall data."
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{ name = "Natalia Nazarova", email = "natalia.nazarova@polito.it" }]
keywords = ["climate", "meteorology", "rainfall", "data-analysis"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]
license = {text = "MIT License"}
dependencies = [
    "fast-histogram",
    "pyyaml",
]

[tool.setuptools.package-data]
tropical_rainfall = ["config/config-tropical-rainfall.yml"]

[project.scripts]
tropical_rainfall = "tropical_rainfall.cli.main:main"

[tool.setuptools.packages]
find = {}
